# mini-grad

./: CONTRIBUTING.md  README.md  pyproject.toml  replit.md
docs/: autograd.md  pytorch_comparison.md
examples/: example_basic.py  example_graph.py  example_mlp.py  example_relu.py
micrograd/: __init__.py  engine.py  nn.py  viz.py
tests/: test_engine.py
