[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "minigrad"
version = "1.0.0"
description = "A minimal scalar-valued autograd engine, inspired by PyTorch"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["autograd", "machine-learning", "deep-learning", "backpropagation", "neural-networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
viz = ["graphviz>=0.20"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["micrograd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"
